# artemis-cli

./: Cargo.toml  README.md  package-lock.json
src/: cli.rs  config.rs  core.rs  main.rs
src/core/: adapter.rs  git.rs  scraper.rs
