[package]
name = "artemis-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
env_logger = "0.11.8"
keyring = { version = "3.6.2", features = ["apple-native", "windows-native", "sync-secret-service"] }
log = "0.4.27"
reqwest = { version = "0.12.22", features = ["cookies", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
tokio = { version = "1.46.1", features = ["full"] }
